[gd_scene load_steps=4 format=3 uid="uid://ce4f4u57jqa5y"]

[ext_resource type="Script" uid="uid://dg2x286sjjtgg" path="res://level.gd" id="1_oi3di"]
[ext_resource type="PackedScene" uid="uid://dyl2x58uhkund" path="res://result_signal.tscn" id="3_0b4ue"]
[ext_resource type="PackedScene" uid="uid://cry4dg0ccj8om" path="res://guess_signal.tscn" id="3_oi3di"]

[node name="Level" type="Node2D"]
script = ExtResource("1_oi3di")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Back" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.116737925, 0.22193485, 0.28974855, 1)
metadata/_edit_lock_ = true

[node name="GuessSignals" type="GridContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.558
anchor_bottom = 0.86700004
offset_left = 256.0
offset_top = 224.0
offset_right = -175.3601
offset_bottom = -72.36005
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 3

[node name="GuessSignal" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal2" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal3" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal4" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal5" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal6" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal7" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal8" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="GuessSignal9" parent="CanvasLayer/GuessSignals" instance=ExtResource("3_oi3di")]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 936.0
offset_right = 704.0
offset_bottom = 1024.0
theme_override_font_sizes/font_size = 32
disabled = true
text = "Confirm"

[node name="ResultSignal" parent="CanvasLayer" instance=ExtResource("3_0b4ue")]
offset_left = 1160.0
offset_top = 248.0
offset_right = 1160.0
offset_bottom = 248.0

[connection signal="pressed" from="CanvasLayer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
